# botok-rs

./: .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml
python/botok_rs/: __init__.py
src/: char_categories.rs  chunker.rs  dialect_pack.rs  lib.rs  main.rs  modifiers.rs  python.rs  sentence.rs  syllable.rs  token.rs  tokenizer.rs  trie.rs
src/data/: .gitkeep  roots.txt
tests/: integration_tests.rs
