[package]
name = "botok-rs"
version = "0.1.0"
edition = "2021"
description = "A fast Tibetan tokenizer in Rust"
license = "Apache-2.0"
authors = ["OpenPecha"]

[lib]
name = "botok_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
zip = { version = "0.6", optional = true }
dirs = { version = "5.0", optional = true }
unicode-normalization = "0.1"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["download"]
download = ["reqwest", "zip", "dirs"]
python = ["pyo3", "download"]

[[bin]]
name = "botok"
path = "src/main.rs"
