[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "botok-rs"
version = "0.1.0"
description = "A fast Tibetan tokenizer written in Rust"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenPecha" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tibetan", "tokenizer", "nlp", "linguistics"]

[project.urls]
Homepage = "https://github.com/OpenPecha/botok"
Repository = "https://github.com/OpenPecha/botok"
Documentation = "https://botok.readthedocs.io/"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "botok_rs.botok_rs"

